Update the webpage

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: url("images/ttttt-min1.jpg");
+  background-image: url("images/48982e53-ec1b-455c-84e0-c4d0be71b657.jpg");
   background-position: 50% 86.05%;
 }
 
