--- a/nicepage.css
+++ b/nicepage.css
@@ -32689,7 +32689,7 @@ a.u-link.u-text-hover-palette-4-light-3:hover {
 .u-text-palette-4-base,
 a.u-button-style.u-text-palette-4-base,
 a.u-button-style.u-text-palette-4-base[class*="u-border-"] {
-  color: #379da8 !important;
+  color: #293233 !important;
 }
 a.u-button-style.u-text-palette-4-base:hover,
 a.u-button-style.u-text-palette-4-base[class*="u-border-"]:hover,
